--- a/profile.html
+++ b/profile.html
@@ -6,11 +6,18 @@
     <title>My Profile Page</title>
 </head>
 <body>
-    <h1>Mohammed Lukman Olalekan</h1>
-    <h3>F4 Address Zaria, Kaduna</h3>
-    <h3>Phone Number: 08755555337</h3>
 
     <h3>Profile</h3>
-    <p>I love to become a software engineer!</p>
+    <p>I love to become a software engineer!
+
+        <img src="alt.img" alt="This is my pic">
+    </p>
+
+
+    <footer>
+        <h1>Mohammed Lukman Olalekan</h1>
+    <h3>F4 Address Zaria, Kaduna</h3>
+    <h3>Phone Number: 08755555337</h3>
+    </footer>
 </body>
 </html>
