--- a/profile.html
+++ b/profile.html
@@ -9,9 +9,9 @@
 
     <h3>Profile</h3>
     <p>I love to become a software engineer!
-
-        <img src="alt.img" alt="This is my pic">
+        I love making new things and very ready for new adventures
     </p>
+    <img src="images/potato.jpg" alt="This is my pic">
 
 
     <footer>
