--- a/profile.html
+++ b/profile.html
@@ -6,18 +6,35 @@
     <title>My Profile Page</title>
 </head>
 <body>
+    <h1>Profile</h1>
 
-    <h3>Profile</h3>
+
+    <nav>
+        <ul>
+            <li>
+                prof
+            </li>
+            <li>
+                foot
+            </li>
+        </ul>
+    </nav>
     <p>I love to become a software engineer!
         I love making new things and very ready for new adventures
+        <img src="images/potato.jpg" alt="my profile picture">
     </p>
-    <img src="images/potato.jpg" alt="This is my pic">
+    <h3>Hobbies</h3>
+    <ol>
+        <li>playing soccer</li>
+        <li>playing badminton</li>
+        <li>reading</li>
+    </ol>
 
 
     <footer>
-        <h1>Mohammed Lukman Olalekan</h1>
-    <h3>F4 Address Zaria, Kaduna</h3>
-    <h3>Phone Number: 08755555337</h3>
+        <h3>Mohammed Lukman Olalekan</h3>
+        <h3>F4 Address Zaria, Kaduna</h3>
+        <h3>Phone Number: 08755555337</h3>
     </footer>
 </body>
 </html>
